--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lxc-tools (0.1.3) unstable; urgency=low
+
+  * Add lxc-init to /etc/init.d
+
+ -- Lucas Bonnet <lbonnet@bearstech.com>  Fri, 28 Jul 2011 11:44:42 +0200
+
 lxc-tools (0.1.2) unstable; urgency=low
 
   * Improved lxc-init and lxc-halt to work on our setup
