--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lxc-tools (0.1.4) unstable; urgency=low
+
+  * Depend on $network for lxc-init
+
+ -- Lucas Bonnet <lbonnet@bearstech.com>  Fri, 28 Jul 2011 11:49:42 +0200
+
 lxc-tools (0.1.3) unstable; urgency=low
 
   * Add lxc-init to /etc/init.d
